[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scripts/desire_feeder/skills/ControlSkill.gd" type="Script" id=1]
[ext_resource path="res://lib/basic/mvvm/Database.gd" type="Script" id=2]
[ext_resource path="res://assets/scripts/desire_feeder/DesireFeeder.gd" type="Script" id=3]
[ext_resource path="res://assets/scripts/desire_feeder/skills/FeederSkill.gd" type="Script" id=4]
[ext_resource path="res://assets/scripts/desire_feeder/DesireFeederModel.gd" type="Script" id=5]
[ext_resource path="res://assets/scripts/desire_feeder/skills/GenerateSkill.gd" type="Script" id=6]
[ext_resource path="res://assets/scripts/desire_feeder/skills/PoopHandleSkill.gd" type="Script" id=7]
[ext_resource path="res://assets/art/sprites/common/circle.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "eat"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Bg1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.478431, 0.988235, 0.643137, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "renew"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Bg1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.478431, 0.988235, 0.643137, 0 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 43.6321

[node name="PoopHandler" type="Node2D" groups=[
"desire_feeder",
]]
position = Vector2( 170.154, 174.827 )
script = ExtResource( 3 )

[node name="Database" type="Node" parent="."]
script = ExtResource( 2 )

[node name="DesireModel" type="Node" parent="Database"]
script = ExtResource( 5 )

[node name="Bg" type="Sprite" parent="."]
modulate = Color( 0.380676, 0.386719, 0.382628, 1 )
texture = ExtResource( 8 )

[node name="Bg1" type="Sprite" parent="."]
modulate = Color( 0.478431, 0.988235, 0.643137, 0 )
texture = ExtResource( 8 )

[node name="CDLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -70.5863
margin_right = 112.0
margin_bottom = -46.5863
text = "食物投放：10s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = 42.1766
margin_right = 52.5
margin_bottom = 66.1766
text = "食物: 10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 71.8759
margin_top = -0.0700531
margin_right = 71.8759
margin_bottom = -0.0700531
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="Control"]
margin_left = -10.1021
margin_top = -39.0056
margin_right = 10.8979
margin_bottom = -9.00556
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty" type="Button" parent="Control"]
margin_left = 16.6248
margin_top = -16.2877
margin_right = 37.6248
margin_bottom = 13.7123
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubButton" type="Button" parent="Control"]
margin_left = -10.0
margin_top = 7.86279
margin_right = 10.0
margin_bottom = 37.8628
text = "-"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/eat = SubResource( 1 )
anims/renew = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="FeederSkill" type="Node" parent="."]
script = ExtResource( 4 )
anim_player_np = NodePath("../AnimationPlayer")
feeder_type = "Poop"

[node name="GenerateSkill" type="Node" parent="."]
script = ExtResource( 6 )
num_text = "存量: %s/%s"
renew_text = "下次处理: %ds"
init_num = 0.0
max_val = 1.0
regenerate_min_num = -25.0
regenerate_max_num = -15.0
num_label_np = NodePath("../NumLabel")
cd_label_np = NodePath("../CDLabel")
anim_player_np = NodePath("../AnimationPlayer")

[node name="GenerateTimer" type="Timer" parent="GenerateSkill"]
one_shot = true

[node name="PoopHandleSkill" type="Node" parent="."]
script = ExtResource( 7 )
anim_player_np = NodePath("../AnimationPlayer")

[node name="ControlSkill" type="Node" parent="."]
script = ExtResource( 1 )
add_val = 5.0

[connection signal="pressed" from="Control/AddButton" to="ControlSkill" method="_on_AddButton_pressed"]
[connection signal="pressed" from="Control/Empty" to="ControlSkill" method="_on_Empty_pressed"]
[connection signal="pressed" from="Control/SubButton" to="ControlSkill" method="_on_SubButton_pressed"]
[connection signal="timeout" from="GenerateSkill/GenerateTimer" to="GenerateSkill" method="_on_GenerateTimer_timeout"]
